--- a/widget/index.html
+++ b/widget/index.html
@@ -34,6 +34,9 @@
 			opacity: 0.5;
 			margin: 10px;
 			text-align: center;
+			border: 3px solid white;
+			border-radius: 15px;
+			padding:5px;
 		}
 	</style>
 </head>
